apps/landisk-search-system/fess/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fess
  labels:
    name: fess
spec:
  rules:
    - host: fess.landisk.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: fess
                port:
                  number: 8080
